--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "clsx": "^2.1.1",
+    "currency-symbol-map": "^5.1.0",
     "formik": "^2.4.6",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-number-format": "^5.4.3",
     "react-select": "^5.10.0",
     "tailwind-merge": "^3.0.1",
     "yup": "^1.6.1"
