--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.6",
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-currency-flags": "^0.1.2",
     "react-dom": "^19.0.0",
     "react-number-format": "^5.4.3",
     "react-select": "^5.10.0",
