--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-number-format": "^5.4.3",
     "react-select": "^5.10.0",
+    "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1",
     "yup": "^1.6.1"
   },
