--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "currency-symbol-map": "^5.1.0",
     "formik": "^2.4.6",
+    "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-currency-flags": "^0.1.2",
