--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
+    "@tanstack/react-query": "^5.66.9",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "currency-symbol-map": "^5.1.0",
     "formik": "^2.4.6",
