--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-currency-flags": "^0.1.2",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-number-format": "^5.4.3",
     "react-select": "^5.10.0",
     "styled-components": "^6.1.15",
