--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "formik": "^2.4.6",
     "framer": "^2.4.1",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.3.3",
     "react": "^19.0.0",
     "react-currency-flags": "^0.1.2",
     "react-dom": "^19.0.0",
