--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer": "^2.4.1",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
+    "next-seo": "^6.8.0",
     "react": "^19.0.0",
     "react-currency-flags": "^0.1.2",
     "react-dom": "^19.0.0",
